bk_ida/gccida/c2/simplify_shift_const
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9380:35: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9380:50: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9383:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9384:4: error: expected ';' after expression
rtx v7; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9384:5: error: use of undeclared identifier 'v7'
rtx v7; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9386:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9387:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9401:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9401:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9413:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9415:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9419:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v43; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9428:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v52; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9437:4: error: expected ';' after expression
rtx v61; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9437:5: error: use of undeclared identifier 'v61'
rtx v61; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9442:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9447:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9447:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/combine.c:9452:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v76; // r13d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_shift_const/src/obj/combine.o] Error 1
